--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,62 +1,61 @@
 services:
-  a_backend:
+  backend:
     build:
       context: ../backend
       dockerfile: Dockerfile
-    container_name: a_backend
-    ports:
-      - "81:81" # http://localhost:81
+    container_name: backend
     volumes:
       - ../backend:/var/www/html
-    depends_on:
-      - a_db
     networks:
-      - app-network
+      - app_network
 
-  a_nginx:
-    build:
-      context: ../nginx
-      dockerfile: Dockerfile
-    container_name: a_nginx
+  nginx:
+    image: nginx:latest
+    container_name: nginx
     ports:
-      - "8000:81"
+      - "80:80"
+      - "443:443"
     volumes:
-      - ../backend:/var/www/html
+      - ../nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - /etc/letsencrypt:/etc/letsencrypt
+      - frontend_data:/usr/share/nginx/html
     depends_on:
-      - a_backend
+      - backend
+      - frontend
     networks:
-      - app-network
+      - app_network
 
-  a_db:
+  db:
     image: mysql:8.0
-    container_name: a_db
-    ports:
-      - "3308:3308"
+    container_name: mysql
+    restart: always
     environment:
-      MYSQL_DATABASE: laravel
-      MYSQL_USER: laravel
-      MYSQL_PASSWORD: secret
       MYSQL_ROOT_PASSWORD: secret
+      MYSQL_DATABASE: laravel
+      MYSQL_USER: admin
+      MYSQL_PASSWORD: secret
     volumes:
-      - ../mysql:/var/lib/mysql
+      - db_data:/var/lib/mysql
+    ports:
+      - "3306:3306"
     networks:
-      - app-network
+      - app_network
 
-  a_frontend:
+  frontend:
     build:
       context: ../frontend
       dockerfile: Dockerfile
-    container_name: a_frontend
+    container_name: frontend
     volumes:
-      - ../frontend:/var/www/html
+      - frontend_data:/usr/share/nginx/html
     ports:
-      - "4200:4200" # http://localhost:4200
+      - "8080:80"
     networks:
-      - app-network
+      - app_network
 
 volumes:
-  mysql_data:
+  db_data:
+  frontend_data:
 
 networks:
-  app-network:
-    driver: bridge
+  app_network:
